// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering snapshots should render valid snapshot 1`] = `
<div>
  <Row
    tag="div"
  >
    <Col
      sm="6"
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
      xl="5"
      xs="12"
    >
      <TagFilterSelect
        filteredTag="tag3"
        setFilteredTag={[MockFunction]}
        tags={
          Array [
            Object {
              "tagText": "tag1",
            },
            Object {
              "tagText": "tag2",
            },
          ]
        }
      />
    </Col>
    <Col
      sm="6"
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
      xl="5"
      xs="12"
    >
      <ThreadBulkUpdateControls
        bulkToggleThreadsAreArchived={[MockFunction]}
        bulkToggleThreadsAreMarkedQueued={[MockFunction]}
        executeBulkAction={[Function]}
        isAllThreads={false}
        isArchive={true}
        isQueue={true}
        openBulkUntrackThreadsModal={[MockFunction]}
        selectedThreadCount={0}
      />
    </Col>
    <Col
      sm={
        Object {
          "offset": 4,
          "size": 4,
        }
      }
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
      xl={
        Object {
          "offset": 0,
          "size": 2,
        }
      }
      xs={
        Object {
          "offset": 3,
          "size": 6,
        }
      }
    >
      <ThreadRefreshButton
        isArchive={true}
        refreshThreads={[MockFunction]}
      />
    </Col>
  </Row>
  <Row
    tag="div"
  >
    <Col
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <p
        className="public-tool-banner"
      >
        Want to share this view publicly? Check out the new
         
        <Link
          href="/tools/public"
          replace={false}
          to="/tools/public"
        >
          Public Views tool
        </Link>
        .
      </p>
    </Col>
  </Row>
  <CheckboxTable
    SubComponent={[Function]}
    className="-striped"
    columns={
      Array [
        Object {
          "key": "column1",
        },
        Object {
          "key": "column2",
        },
      ]
    }
    data={
      Array [
        Object {
          "_id": 1,
          "thread": Object {
            "threadId": 1,
          },
        },
        Object {
          "_id": 2,
          "thread": Object {
            "threadId": 2,
          },
        },
        Object {
          "_id": 3,
          "thread": Object {
            "threadId": 3,
          },
        },
      ]
    }
    defaultFilterMethod={[MockFunction]}
    defaultPageSize={50}
    defaultSorted={
      Array [
        Object {
          "desc": true,
          "id": "status.lastPostDate",
        },
      ]
    }
    getTdProps={[MockFunction]}
    noDataText="No Threads Found"
    onPageSizeChange={[MockFunction]}
    onSelectionChanged={[Function]}
    showPaginationTop={true}
    useLightTheme={false}
  />
</div>
`;

exports[`rendering snapshots should render valid snapshot when items are selected 1`] = `
<div>
  <Row
    tag="div"
  >
    <Col
      sm="6"
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
      xl="5"
      xs="12"
    >
      <TagFilterSelect
        filteredTag="tag3"
        setFilteredTag={[MockFunction]}
        tags={
          Array [
            Object {
              "tagText": "tag1",
            },
            Object {
              "tagText": "tag2",
            },
          ]
        }
      />
    </Col>
    <Col
      sm="6"
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
      xl="5"
      xs="12"
    >
      <ThreadBulkUpdateControls
        bulkToggleThreadsAreArchived={[MockFunction]}
        bulkToggleThreadsAreMarkedQueued={[MockFunction]}
        executeBulkAction={[Function]}
        isAllThreads={false}
        isArchive={true}
        isQueue={true}
        openBulkUntrackThreadsModal={[MockFunction]}
        selectedThreadCount={2}
      />
    </Col>
    <Col
      sm={
        Object {
          "offset": 4,
          "size": 4,
        }
      }
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
      xl={
        Object {
          "offset": 0,
          "size": 2,
        }
      }
      xs={
        Object {
          "offset": 3,
          "size": 6,
        }
      }
    >
      <ThreadRefreshButton
        isArchive={true}
        refreshThreads={[MockFunction]}
      />
    </Col>
  </Row>
  <Row
    tag="div"
  >
    <Col
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <p
        className="public-tool-banner"
      >
        Want to share this view publicly? Check out the new
         
        <Link
          href="/tools/public"
          replace={false}
          to="/tools/public"
        >
          Public Views tool
        </Link>
        .
      </p>
    </Col>
  </Row>
  <CheckboxTable
    SubComponent={[Function]}
    className="-striped"
    columns={
      Array [
        Object {
          "key": "column1",
        },
        Object {
          "key": "column2",
        },
      ]
    }
    data={
      Array [
        Object {
          "_id": 1,
          "thread": Object {
            "threadId": 1,
          },
        },
        Object {
          "_id": 2,
          "thread": Object {
            "threadId": 2,
          },
        },
        Object {
          "_id": 3,
          "thread": Object {
            "threadId": 3,
          },
        },
      ]
    }
    defaultFilterMethod={[MockFunction]}
    defaultPageSize={50}
    defaultSorted={
      Array [
        Object {
          "desc": true,
          "id": "status.lastPostDate",
        },
      ]
    }
    getTdProps={[MockFunction]}
    noDataText="Loading..."
    onPageSizeChange={[MockFunction]}
    onSelectionChanged={[Function]}
    showPaginationTop={true}
    useLightTheme={false}
  />
</div>
`;

exports[`rendering snapshots should render valid snapshot when loading 1`] = `
<div>
  <Row
    tag="div"
  >
    <Col
      sm="6"
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
      xl="5"
      xs="12"
    >
      <TagFilterSelect
        filteredTag="tag3"
        setFilteredTag={[MockFunction]}
        tags={
          Array [
            Object {
              "tagText": "tag1",
            },
            Object {
              "tagText": "tag2",
            },
          ]
        }
      />
    </Col>
    <Col
      sm="6"
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
      xl="5"
      xs="12"
    >
      <ThreadBulkUpdateControls
        bulkToggleThreadsAreArchived={[MockFunction]}
        bulkToggleThreadsAreMarkedQueued={[MockFunction]}
        executeBulkAction={[Function]}
        isAllThreads={false}
        isArchive={true}
        isQueue={true}
        openBulkUntrackThreadsModal={[MockFunction]}
        selectedThreadCount={0}
      />
    </Col>
    <Col
      sm={
        Object {
          "offset": 4,
          "size": 4,
        }
      }
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
      xl={
        Object {
          "offset": 0,
          "size": 2,
        }
      }
      xs={
        Object {
          "offset": 3,
          "size": 6,
        }
      }
    >
      <ThreadRefreshButton
        isArchive={true}
        refreshThreads={[MockFunction]}
      />
    </Col>
  </Row>
  <Row
    tag="div"
  >
    <Col
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <p
        className="public-tool-banner"
      >
        Want to share this view publicly? Check out the new
         
        <Link
          href="/tools/public"
          replace={false}
          to="/tools/public"
        >
          Public Views tool
        </Link>
        .
      </p>
    </Col>
  </Row>
  <CheckboxTable
    SubComponent={[Function]}
    className="-striped"
    columns={
      Array [
        Object {
          "key": "column1",
        },
        Object {
          "key": "column2",
        },
      ]
    }
    data={
      Array [
        Object {
          "_id": 1,
          "thread": Object {
            "threadId": 1,
          },
        },
        Object {
          "_id": 2,
          "thread": Object {
            "threadId": 2,
          },
        },
        Object {
          "_id": 3,
          "thread": Object {
            "threadId": 3,
          },
        },
      ]
    }
    defaultFilterMethod={[MockFunction]}
    defaultPageSize={50}
    defaultSorted={
      Array [
        Object {
          "desc": true,
          "id": "status.lastPostDate",
        },
      ]
    }
    getTdProps={[MockFunction]}
    noDataText="Loading..."
    onPageSizeChange={[MockFunction]}
    onSelectionChanged={[Function]}
    showPaginationTop={true}
    useLightTheme={false}
  />
</div>
`;

exports[`rendering snapshots should render valid snapshot when threadTablePageSize not provided 1`] = `
<div>
  <Row
    tag="div"
  >
    <Col
      sm="6"
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
      xl="5"
      xs="12"
    >
      <TagFilterSelect
        filteredTag="tag3"
        setFilteredTag={[MockFunction]}
        tags={
          Array [
            Object {
              "tagText": "tag1",
            },
            Object {
              "tagText": "tag2",
            },
          ]
        }
      />
    </Col>
    <Col
      sm="6"
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
      xl="5"
      xs="12"
    >
      <ThreadBulkUpdateControls
        bulkToggleThreadsAreArchived={[MockFunction]}
        bulkToggleThreadsAreMarkedQueued={[MockFunction]}
        executeBulkAction={[Function]}
        isAllThreads={false}
        isArchive={true}
        isQueue={true}
        openBulkUntrackThreadsModal={[MockFunction]}
        selectedThreadCount={2}
      />
    </Col>
    <Col
      sm={
        Object {
          "offset": 4,
          "size": 4,
        }
      }
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
      xl={
        Object {
          "offset": 0,
          "size": 2,
        }
      }
      xs={
        Object {
          "offset": 3,
          "size": 6,
        }
      }
    >
      <ThreadRefreshButton
        isArchive={true}
        refreshThreads={[MockFunction]}
      />
    </Col>
  </Row>
  <Row
    tag="div"
  >
    <Col
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <p
        className="public-tool-banner"
      >
        Want to share this view publicly? Check out the new
         
        <Link
          href="/tools/public"
          replace={false}
          to="/tools/public"
        >
          Public Views tool
        </Link>
        .
      </p>
    </Col>
  </Row>
  <CheckboxTable
    SubComponent={[Function]}
    className="-striped"
    columns={
      Array [
        Object {
          "key": "column1",
        },
        Object {
          "key": "column2",
        },
      ]
    }
    data={
      Array [
        Object {
          "_id": 1,
          "thread": Object {
            "threadId": 1,
          },
        },
        Object {
          "_id": 2,
          "thread": Object {
            "threadId": 2,
          },
        },
        Object {
          "_id": 3,
          "thread": Object {
            "threadId": 3,
          },
        },
      ]
    }
    defaultFilterMethod={[MockFunction]}
    defaultPageSize={10}
    defaultSorted={
      Array [
        Object {
          "desc": true,
          "id": "status.lastPostDate",
        },
      ]
    }
    getTdProps={[MockFunction]}
    noDataText="No Threads Found"
    onPageSizeChange={[MockFunction]}
    onSelectionChanged={[Function]}
    showPaginationTop={true}
    useLightTheme={false}
  />
</div>
`;
